Update DataSeeder.java